--- a/www/contact_us.html
+++ b/www/contact_us.html
@@ -59,9 +59,9 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                 	<li>
-                    	<a data-toggle="modal" data-target="#modalLogin">
+                    	<a id="nav-login">
                         	<span class="glyphicon glyphicon-log-in"></span> Login
-                        </a>
+                        </a><!-- data-toggle="modal" data-target="#modalLogin"-->
                     </li>
                 </ul>
             </div>
@@ -273,6 +273,12 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
+	<script>
+		$(document).ready(function() {
+            $('#nav-login').click(function(){
+				$('#modalLogin').modal();
+			});
+        });
+	</script>
 
 </body></html>
